# cbc_pdet

./: .gitignore  Likelihood_Poisson.py  MANIFEST.in  README.md  class_found_inj.py  class_found_inj.txt  class_found_inj_fullexpansion.py  class_found_inj_general.py  fit_values.py  fitting_functions.py  grid_alpha_emax.py  joint_fit.py  joint_fit_dL.py  joint_fit_dL_3.py  joint_fit_dL_emax.py  joint_fit_dL_emax_vary.py  mass_logbins.py  mass_logbins_dL.py  o123_class_found_inj_general.py  pull_request.py  pyproject.toml  script_run.py  some_plots.py  try.py
Dmid_mchirp_expansion/: KStest_results_Mtotbins.rtf  KStest_results_dLbins.rtf  KStest_results_etabins.rtf
Dmid_mchirp_expansion/cmds/: KStest_results_Mcbins.rtf
Dmid_mchirp_expansion/emax_exp_cmds/: KStest_results_Mcbins.rtf  KStest_results_Mtotbins.rtf  KStest_results_dLbins.rtf  KStest_results_etabins.rtf
Dmid_mchirp_expansion_a11/: kstest_emaxfun.rtf
Dmid_mchirp_expansion_a11/emax_exp_cmds/: KStest_results_Mcbins.rtf  KStest_results_Mtotbins.rtf  KStest_results_dLbins.rtf  KStest_results_etabins.rtf
Dmid_mchirp_expansion_asqrt/emax_exp_cmds/: KStest_results_Mcbins.rtf  KStest_results_etabins.rtf
cbc_pdet/: FC.py  Likelihood_Poisson.py  Nexp_MC.py  __init__.py  d0.npy  example_run_script.py  fitting_functions.py  gwtc_found_inj.py  joint_fit_dL_emax_vary.py  mass_logbins.py  o123_class_found_inj_general.py  pdet_api.py  requirements.txt  script_run.py  some_plots.py  test_VT.py
cbc_pdet/binned_analysis/: fit_values.py  (+5 more)
o1o2/: o1o2_class_found_inj_general.py
o1o2o3/: o1o2o3_class_found_inj_general.py
(+141 files in other folders)
